:bug: Use fixed px for scrollbars
So they don't scale when the font size is changed

--- a/styles/atom.less
+++ b/styles/atom.less
@@ -15,8 +15,8 @@ atom-workspace {
 // Scrollbars
 .scrollbars-visible-always {
 	/deep/ ::-webkit-scrollbar {
-		width: @component-padding;
-		height: @component-padding;
+		width: 10px;
+		height: 10px;
 	}
 
 	/deep/ ::-webkit-scrollbar-track {
@@ -24,7 +24,7 @@ atom-workspace {
 	}
 
 	/deep/ ::-webkit-scrollbar-thumb {
-		border-radius: @component-padding;
+		border-radius: 5px;
 		border: 3px solid @scrollbar-background-color;
 		background: @scrollbar-color;
 		background-clip: content-box;
